--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
             axios.get("https://crudcrud.com/api/de6fb371b44442ccbe899ee2852a357d/addData")
             .then(res=>{
-                showNewUserOnScreen(res.data);
+               res.data.map(response=>{
+                showNewUserOnScreen(response);
+               })
             })
             .catch(err=>{
                 console.log(err);
